syntax = "proto3";

option go_package = "github.com/stoikheia/GomockProposalSample1/protobuf/helloworld";
package helloworld;

// The greeting service definition.
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message StreamingHelloReply {
  string result = 1;
}
